--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "name=.endswith(com)"
+    "name=.endswith(\"\""
    ]
   },
   {
