Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,21 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-70db5d37bf15>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-1-8710772c4dfe>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-70db5d37bf15>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name=.endswith(com)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8710772c4dfe>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name=.endswith(\"com\")\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "name=.endswith(\"com\""
+    "\"art\".endswith(\"com\")"
    ]
   },
   {
