--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art\".endswith(\"com\")"
+    "\"art.vandelay@vandelay.co\".endswith(\"com\")"
    ]
   },
   {
