Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "heard"
+    "hearder = \"www.\""
    ]
   },
   {
