--- a/index.ipynb
+++ b/index.ipynb
@@ -240,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "hearder = \"www.\""
+    "hearder = \"www\"+sr"
    ]
   },
   {
