--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "\"van\"\"www\"+str(\".com\")"
+    "\"vanderlay.com\"\"www\"+str(\".com\")"
    ]
   },
   {
