--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
    ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "str(www)+\"vandelay.com\""
+    "heade"
    ]
   },
   {
