--- a/index.ipynb
+++ b/index.ipynb
@@ -240,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "header =\"www.\"+website"
+    "web"
    ]
   },
   {
