--- a/index.ipynb
+++ b/index.ipynb
@@ -240,14 +240,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wwwvandelay.com'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web"
+    "\"www\"+website"
    ]
   },
   {
