--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -248,17 +248,17 @@
     {
      "data": {
       "text/plain": [
-       "'wwwvandelay.com'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www\"+website"
+    "\"www.\"+website"
    ]
   },
   {
